[tool.poetry]
name = "nba-cls"
version = "0.1.0"
description = ""
authors = ["Sergei Korneev <korneevsk.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.0"  # Use a version less than 2.0.0
scikit-learn = "^1.1.2"
xgboost = "^1.6.1"
nba-api = "^1.6.1"
matplotlib = "^3.9.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
